--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "testab",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://nsandobal.github.io/testab",
+  "homepage": "https://nsandobal.github.io/testab",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
